--- a/src/main/resources/view/dash-board.fxml
+++ b/src/main/resources/view/dash-board.fxml
@@ -1,34 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="dashboardAnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.DashBoardController">
+<AnchorPane fx:id="dashboardAnchorPane" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #000101;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.DashBoardController">
    <children>
-      <Pane prefHeight="109.0" prefWidth="1283.0">
+      <VBox alignment="TOP_CENTER" layoutY="5.0" prefHeight="711.0" prefWidth="1283.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
          <children>
-            <Label layoutX="517.0" layoutY="16.0" prefHeight="21.0" prefWidth="249.0" text="Auto Rent Pro" textAlignment="CENTER" textFill="#0b58ab">
-               <font>
-                  <Font name="FreeSerif Bold" size="40.0" />
-               </font>
-            </Label>
+            <HBox alignment="TOP_CENTER" prefHeight="150.0" prefWidth="200.0">
+               <children>
+                  <Label prefHeight="80.0" prefWidth="254.0" text="Auto Rent Pro" textAlignment="CENTER" textFill="#b7bbbb">
+                     <font>
+                        <Font name="FreeSerif Bold" size="40.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets top="30.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox alignment="TOP_CENTER" prefHeight="224.0" prefWidth="1283.0">
+               <children>
+                  <ImageView fx:id="dashboardImage" fitHeight="546.0" fitWidth="812.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/dashboard.jpg" />
+                     </image>
+                  </ImageView>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_RIGHT" prefHeight="231.0" prefWidth="1280.0">
+               <children>
+                  <Button fx:id="btnSignin" mnemonicParsing="false" onAction="#SigninBtnOnAction" style="-fx-background-color: #b7bbbb;" text="Signin" textFill="#393c44">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets bottom="20.0" right="20.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
          </children>
-      </Pane>
-      <ImageView fx:id="dashboardImage" fitHeight="341.0" fitWidth="1283.0" layoutX="68.0" layoutY="166.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/dashboard.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="btnSignin" layoutX="1092.0" layoutY="612.0" mnemonicParsing="false" onAction="#SigninBtnOnAction" style="-fx-background-color: #0b58ab;" text="Signin" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Button>
+      </VBox>
    </children>
 </AnchorPane>
