--- a/src/main/resources/view/home-page.fxml
+++ b/src/main/resources/view/home-page.fxml
@@ -11,9 +11,9 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.HomePageController">
    <children>
-      <Pane prefHeight="724.0" prefWidth="194.0" style="-fx-background-color: #2ca2c5;">
+      <Pane prefHeight="724.0" prefWidth="194.0" style="-fx-background-color: #030202;">
          <children>
-            <Label layoutX="67.0" layoutY="14.0" text="Home">
+            <Label layoutX="67.0" layoutY="14.0" text="Home" textFill="#3d7ba4">
                <font>
                   <Font name="System Bold" size="19.0" />
                </font>
@@ -21,7 +21,7 @@
             <VBox layoutX="58.0" layoutY="78.0" prefHeight="28.0" prefWidth="100.0" />
             <VBox layoutX="22.0" layoutY="64.0" prefHeight="70.0" prefWidth="157.0">
                <children>
-                  <Button fx:id="btnCustomer" mnemonicParsing="false" onAction="#customerOnaction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #2ca2c5;" text="Customer" textFill="WHITE">
+                  <Button fx:id="btnCustomer" mnemonicParsing="false" onAction="#customerOnaction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Customer" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -30,7 +30,7 @@
             </VBox>
             <VBox layoutX="22.0" layoutY="134.0" prefHeight="70.0" prefWidth="157.0">
                <children>
-                  <Button fx:id="btnReservation" mnemonicParsing="false" onAction="#reservationOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #2ca2c5;" text="Reservation" textFill="WHITE">
+                  <Button fx:id="btnReservation" mnemonicParsing="false" onAction="#reservationOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Reservation" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -39,7 +39,7 @@
             </VBox>
             <VBox layoutX="17.0" layoutY="204.0" prefHeight="70.0" prefWidth="157.0">
                <children>
-                  <Button fx:id="btnVehicle" mnemonicParsing="false" onAction="#vehicleOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #2ca2c5;" text="Vehicle" textFill="WHITE">
+                  <Button fx:id="btnVehicle" mnemonicParsing="false" onAction="#vehicleOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Vehicle" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -48,7 +48,7 @@
             </VBox>
             <VBox layoutX="17.0" layoutY="274.0" prefHeight="70.0" prefWidth="157.0">
                <children>
-                  <Button fx:id="btnDriver" mnemonicParsing="false" onAction="#driverOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #2ca2c5;" text="Driver" textFill="WHITE">
+                  <Button fx:id="btnDriver" mnemonicParsing="false" onAction="#driverOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Driver" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -57,7 +57,7 @@
             </VBox>
             <VBox layoutX="17.0" layoutY="344.0" prefHeight="70.0" prefWidth="157.0">
                <children>
-                  <Button fx:id="btnPayment" mnemonicParsing="false" onAction="#paymentOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #2ca2c5;" text="Payment" textFill="WHITE">
+                  <Button fx:id="btnPayment" mnemonicParsing="false" onAction="#paymentOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Payment" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -66,7 +66,7 @@
             </VBox>
             <VBox layoutX="17.0" layoutY="414.0" prefHeight="70.0" prefWidth="157.0">
                <children>
-                  <Button fx:id="btnInvoice" mnemonicParsing="false" onAction="#invoiceOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #2ca2c5;" text="Invoice" textFill="WHITE">
+                  <Button fx:id="btnInvoice" mnemonicParsing="false" onAction="#invoiceOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Invoice" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -75,7 +75,7 @@
             </VBox>
             <VBox layoutX="22.0" layoutY="484.0" prefHeight="70.0" prefWidth="157.0">
                <children>
-                  <Button fx:id="btnMAintenance" mnemonicParsing="false" onAction="#maintenanceOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #2ca2c5;" text="Maintenance" textFill="WHITE">
+                  <Button fx:id="btnMAintenance" mnemonicParsing="false" onAction="#maintenanceOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Maintenance" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -84,7 +84,7 @@
             </VBox>
             <VBox layoutX="17.0" layoutY="554.0" prefHeight="70.0" prefWidth="157.0">
                <children>
-                  <Button fx:id="btnMilage" mnemonicParsing="false" onAction="#mileageTrackingOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #2ca2c5;" text="Mileage Track" textFill="WHITE">
+                  <Button fx:id="btnMilage" mnemonicParsing="false" onAction="#mileageTrackingOnAction" prefHeight="37.0" prefWidth="158.0" style="-fx-background-color: #030202;" text="Mileage Track" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -93,9 +93,9 @@
             </VBox>
          </children>
       </Pane>
-      <AnchorPane fx:id="homeAnchorPAne" layoutX="200.0" layoutY="-2.0" prefHeight="724.0" prefWidth="1083.0">
+      <AnchorPane fx:id="homeAnchorPAne" layoutX="200.0" layoutY="-2.0" prefHeight="726.0" prefWidth="1120.0">
          <children>
-            <ImageView fx:id="homeImage" fitHeight="726.0" fitWidth="1120.0" layoutX="-6.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="homeImage" fitHeight="726.0" fitWidth="1120.0" layoutX="-6.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-6.0" AnchorPane.rightAnchor="37.0" AnchorPane.topAnchor="0.0">
                <image>
                   <Image url="@../assets/homepage.jpeg" />
                </image>
