--- a/src/main/resources/view/login-page.fxml
+++ b/src/main/resources/view/login-page.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -12,65 +13,98 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="loginPageAnchorPane" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #0b58ab;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.LoginPageController">
+<AnchorPane fx:id="loginPageAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.LoginPageController">
    <children>
-      <ImageView fx:id="loginImage" fitHeight="720.0" fitWidth="417.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/loginPage.jpg" />
-         </image>
-      </ImageView>
-      <VBox layoutX="478.0" layoutY="234.0" prefHeight="170.0" prefWidth="704.0">
+      <VBox alignment="TOP_CENTER" layoutX="-2.0" prefHeight="720.0" prefWidth="1286.0" style="-fx-background-color: #090909;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-2.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox prefHeight="130.0" prefWidth="704.0">
+            <HBox alignment="CENTER_RIGHT" prefHeight="722.0" prefWidth="1286.0" VBox.vgrow="ALWAYS">
                <children>
-                  <Label prefHeight="40.0" prefWidth="259.0" text="User Name" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="28.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtUserName" prefHeight="39.0" prefWidth="444.0" promptText="username" style="-fx-background-color: efe6eb;">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </HBox>
-            <HBox prefHeight="41.0" prefWidth="704.0">
-               <children>
-                  <Label prefHeight="40.0" prefWidth="259.0" text="Password" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="28.0" />
-                     </font>
-                  </Label>
-                  <PasswordField fx:id="txtPassword" onKeyTyped="#passwordKeyFieldType" prefHeight="39.0" prefWidth="444.0" promptText="password" style="-fx-background-color: efe6eb;">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </PasswordField>
+                  <VBox prefHeight="720.0" prefWidth="624.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="295.0" prefWidth="623.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <Label text="User Name" textFill="#bab8b8">
+                                 <font>
+                                    <Font name="System Bold" size="23.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="40.0" right="40.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <TextField fx:id="txtUserName" prefHeight="26.0" prefWidth="317.0" style="-fx-background-color: #bab8b8;">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </TextField>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="82.0" prefWidth="623.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <Label text="Password" textFill="#bab8b8">
+                                 <font>
+                                    <Font name="System Bold" size="23.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="40.0" right="50.0" />
+                                 </HBox.margin>
+                              </Label>
+                              <PasswordField fx:id="txtPassword" onKeyTyped="#passwordKeyFieldType" prefHeight="26.0" prefWidth="317.0" style="-fx-background-color: #bab8b8;">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </PasswordField>
+                           </children>
+                        </HBox>
+                        <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="175.0" prefHeight="139.0" prefWidth="623.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <Label fx:id="shownPwLabel" prefHeight="21.0" prefWidth="252.0" text="Label" textFill="WHITE">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Label>
+                              <ToggleButton fx:id="btnShow" mnemonicParsing="false" onAction="#passwordShowButtonOnAction" prefHeight="26.0" prefWidth="59.0" style="-fx-background-color: #bab8b8;" text="Show">
+                                 <HBox.margin>
+                                    <Insets right="108.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </ToggleButton>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="337.0" prefWidth="623.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <Button fx:id="btnBack" mnemonicParsing="false" onAction="#BackButtonOnAction" style="-fx-background-color: #bab8b8;" text="Back">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets bottom="25.0" left="40.0" right="50.0" top="100.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button fx:id="btnLogin" layoutX="50.0" layoutY="10.0" mnemonicParsing="false" onAction="#LoginButtonOnAction" style="-fx-background-color: #bab8b8;" text="Login">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="300.0" top="100.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  <ImageView fx:id="loginImage" fitHeight="473.0" fitWidth="663.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+                     <image>
+                        <Image url="@../assets/login.jpg" />
+                     </image>
+                  </ImageView>
                </children>
             </HBox>
          </children>
       </VBox>
-      <Button fx:id="btnLogin" layoutX="1090.0" layoutY="592.0" mnemonicParsing="false" onAction="#LoginButtonOnAction" style="-fx-background-color: black;" text="Login" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="22.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnBack" layoutX="478.0" layoutY="592.0" mnemonicParsing="false" onAction="#BackButtonOnAction" style="-fx-background-color: black;" text="Back" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="22.0" />
-         </font>
-      </Button>
-      <Label fx:id="shownPwLabel" layoutX="738.0" layoutY="404.0" text="shown password">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <ToggleButton fx:id="btnShow" layoutX="1206.0" layoutY="366.0" mnemonicParsing="false" onAction="#passwordShowButtonOnAction" style="-fx-border-color: black; -fx-background-color: #0b58ab;" text="Show" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </ToggleButton>
    </children>
 </AnchorPane>
