--- a/src/main/resources/view/customer-view.fxml
+++ b/src/main/resources/view/customer-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -7,31 +8,38 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="customerAnchorPane" prefHeight="720.0" prefWidth="1120.0" style="-fx-background-color: #27272d;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.CustomerController">
+<AnchorPane fx:id="customerAnchorPane" prefHeight="726.0" prefWidth="1120.0" style="-fx-background-color: #27272d;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.CustomerController">
    <children>
-      <VBox layoutX="24.0" layoutY="21.0" prefHeight="288.0" prefWidth="1064.0">
+      <VBox alignment="CENTER" layoutX="24.0" layoutY="21.0" prefHeight="728.0" prefWidth="1129.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox prefHeight="46.0" prefWidth="1064.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="1064.0">
                <children>
                   <Label prefHeight="22.0" prefWidth="199.0" text="Customer Id" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </Label>
-                  <Label fx:id="lblCustomerId" text="1" textFill="WHITE">
+                  <Label fx:id="lblCustomerId" prefHeight="21.0" prefWidth="401.0" text="1" textFill="WHITE">
                      <font>
                         <Font name="System Bold Italic" size="15.0" />
                      </font>
                   </Label>
+                  <TextField fx:id="searchBar" prefHeight="26.0" prefWidth="447.0" promptText="search">
+                     <font>
+                        <Font name="System Bold Italic" size="13.0" />
+                     </font>
+                  </TextField>
                </children>
             </HBox>
             <HBox layoutX="10.0" layoutY="10.0" prefHeight="46.0" prefWidth="1064.0">
                <children>
-                  <HBox prefHeight="46.0" prefWidth="1064.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="1064.0">
                      <children>
                         <Label prefHeight="22.0" prefWidth="199.0" text="Name" textFill="#819dbc">
                            <font>
@@ -44,15 +52,21 @@
                            </font>
                         </TextField>
                      </children>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </HBox>
                </children>
             </HBox>
-            <HBox prefHeight="46.0" prefWidth="1064.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="1064.0">
                <children>
                   <Label prefHeight="22.0" prefWidth="199.0" text="Address" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </Label>
                   <TextField fx:id="txtAddress" prefHeight="26.0" prefWidth="874.0" promptText="address" style="-fx-border-color: black; -fx-background-color: #27272d; -fx-border-width: 0 0 1px 0;">
                      <font>
@@ -60,13 +74,19 @@
                      </font>
                   </TextField>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </HBox>
-            <HBox layoutX="10.0" layoutY="102.0" prefHeight="46.0" prefWidth="1064.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="102.0" prefHeight="46.0" prefWidth="1064.0">
                <children>
                   <Label prefHeight="22.0" prefWidth="199.0" text="Email" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </Label>
                   <TextField fx:id="txtEmail" prefHeight="26.0" prefWidth="874.0" promptText="email@gmail.com" style="-fx-border-color: black; -fx-background-color: #27272d; -fx-border-width: 0 0 1px 0;">
                      <font>
@@ -75,12 +95,15 @@
                   </TextField>
                </children>
             </HBox>
-            <HBox layoutX="10.0" layoutY="148.0" prefHeight="46.0" prefWidth="1064.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="148.0" prefHeight="46.0" prefWidth="1064.0">
                <children>
                   <Label prefHeight="22.0" prefWidth="199.0" text="Phone Number" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </Label>
                   <TextField fx:id="txtPhone" prefHeight="26.0" prefWidth="874.0" promptText="0000000000" style="-fx-background-color: #27272d; -fx-border-color: black; -fx-border-width: 0 0 1px 0;">
                      <font>
@@ -89,12 +112,15 @@
                   </TextField>
                </children>
             </HBox>
-            <HBox layoutX="10.0" layoutY="194.0" prefHeight="46.0" prefWidth="1064.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="194.0" prefHeight="51.0" prefWidth="1120.0">
                <children>
                   <Label prefHeight="22.0" prefWidth="199.0" text="Nic" textFill="#819dbc">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets left="30.0" />
+                     </HBox.margin>
                   </Label>
                   <TextField fx:id="txtNic" prefHeight="26.0" prefWidth="874.0" promptText="000000000000" style="-fx-background-color: #27272d; -fx-border-color: black; -fx-border-width: 0 0 1px 0;">
                      <font>
@@ -103,46 +129,56 @@
                   </TextField>
                </children>
             </HBox>
-         </children>
-      </VBox>
-      <Button fx:id="btnSave" layoutX="24.0" layoutY="309.0" mnemonicParsing="false" onAction="#SaveCustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #35068c;" text="Save" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnUpdate" layoutX="246.0" layoutY="309.0" mnemonicParsing="false" onAction="#updateCustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #4f80b8;" text="Update" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnDelete" layoutX="471.0" layoutY="309.0" mnemonicParsing="false" onAction="#deleteCustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #a63322;" text="Delete" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnReset" layoutX="716.0" layoutY="309.0" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #5e39a4;" text="Reset" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnSearch" layoutX="946.0" layoutY="309.0" mnemonicParsing="false" onAction="#searchcustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #8b12a6;" text="Search" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Button>
-      <Pane fx:id="tablePane" layoutX="-1.0" layoutY="343.0" prefHeight="383.0" prefWidth="1120.0">
-         <children>
-            <TableView fx:id="customerTableView" layoutY="4.0" onMouseClicked="#clickedTable" prefHeight="383.0" prefWidth="1120.0" style="-fx-background-color: #a0b5c9;">
-              <columns>
-                <TableColumn fx:id="colId" prefWidth="109.0" text="Customer Id" />
-                <TableColumn fx:id="colName" prefWidth="193.0" text="Name" />
+            <HBox alignment="CENTER_LEFT" prefHeight="57.0" prefWidth="1101.0">
+               <children>
+                  <Button fx:id="btnSave" mnemonicParsing="false" onAction="#SaveCustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #35068c;" text="Save" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="30.0" right="150.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#updateCustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #4f80b8;" text="Update" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets right="150.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#deleteCustomerOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #a63322;" text="Delete" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets right="150.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnReset" mnemonicParsing="false" onAction="#resetOnAction" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #5e39a4;" text="Reset" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </HBox>
+            <TableView fx:id="customerTableView" onMouseClicked="#clickedTable" prefHeight="391.0" prefWidth="1120.0" style="-fx-background-color: #a0b5c9;">
+               <columns>
+                  <TableColumn fx:id="colId" prefWidth="109.0" text="Customer Id" />
+                  <TableColumn fx:id="colName" prefWidth="193.0" text="Name" />
                   <TableColumn fx:id="colAddress" prefWidth="217.0" text="Address" />
                   <TableColumn fx:id="colEmail" prefWidth="191.0" text="Email" />
                   <TableColumn fx:id="colPhone" prefWidth="198.0" text="Phone Number" />
                   <TableColumn fx:id="colNic" prefWidth="211.0" text="Nic" />
-              </columns>
+               </columns>
             </TableView>
          </children>
-      </Pane>
+      </VBox>
    </children>
 </AnchorPane>
