--- a/src/main/resources/view/login-page.fxml
+++ b/src/main/resources/view/login-page.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginPageAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.LoginPageController">
+<AnchorPane fx:id="loginPageAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="726.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.LoginPageController">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="-2.0" prefHeight="720.0" prefWidth="1286.0" style="-fx-background-color: #090909;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-2.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -65,21 +65,21 @@
                                     <Insets />
                                  </HBox.margin>
                               </Label>
-                              <ToggleButton fx:id="btnShow" mnemonicParsing="false" onAction="#passwordShowButtonOnAction" prefHeight="26.0" prefWidth="59.0" style="-fx-background-color: #bab8b8;" text="Show">
+                              <ToggleButton fx:id="btnShow" mnemonicParsing="false" onAction="#passwordShowButtonOnAction" prefHeight="26.0" prefWidth="46.0" style="-fx-background-color: #bab8b8;" text="Show">
                                  <HBox.margin>
                                     <Insets right="108.0" />
                                  </HBox.margin>
                                  <font>
-                                    <Font name="System Bold" size="14.0" />
+                                    <Font name="System Bold" size="11.0" />
                                  </font>
                               </ToggleButton>
                            </children>
                         </HBox>
-                        <HBox prefHeight="337.0" prefWidth="623.0" VBox.vgrow="ALWAYS">
+                        <HBox alignment="BOTTOM_LEFT" prefHeight="337.0" prefWidth="623.0" VBox.vgrow="ALWAYS">
                            <children>
-                              <Button fx:id="btnBack" mnemonicParsing="false" onAction="#BackButtonOnAction" style="-fx-background-color: #bab8b8;" text="Back">
+                              <Button fx:id="btnSignup" mnemonicParsing="false" onAction="#SignupBtnOnAction" style="-fx-background-color: #bab8b8;" text="SignUp">
                                  <font>
-                                    <Font name="System Bold" size="18.0" />
+                                    <Font name="System Bold" size="14.0" />
                                  </font>
                                  <HBox.margin>
                                     <Insets bottom="25.0" left="40.0" right="50.0" top="100.0" />
@@ -87,10 +87,10 @@
                               </Button>
                               <Button fx:id="btnLogin" layoutX="50.0" layoutY="10.0" mnemonicParsing="false" onAction="#LoginButtonOnAction" style="-fx-background-color: #bab8b8;" text="Login">
                                  <font>
-                                    <Font name="System Bold" size="18.0" />
+                                    <Font name="System Bold" size="14.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets left="300.0" top="100.0" />
+                                    <Insets bottom="25.0" left="300.0" top="100.0" />
                                  </HBox.margin>
                               </Button>
                            </children>
