--- a/src/main/resources/view/payment-view.fxml
+++ b/src/main/resources/view/payment-view.fxml
@@ -13,36 +13,35 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="paymentAnchorPane" prefHeight="720.0" prefWidth="1120.0" style="-fx-background-color: #27272d;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.PaymentController">
+<AnchorPane fx:id="paymentAnchorPane" prefHeight="726.0" prefWidth="1120.0" style="-fx-background-color: #27272d;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse71.finalproject.controller.PaymentController">
    <children>
       <VBox prefHeight="720.0" prefWidth="1120.0">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="1120.0">
                <children>
-                  <Label prefHeight="22.0" prefWidth="166.0" text="Payment Id" textFill="#819dbc">
+                  <Button fx:id="btnBack" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#navigateToReservationView" prefHeight="32.0" prefWidth="481.0" style="-fx-background-color: #27272d;" text="&lt;&lt;" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
-                     <HBox.margin>
-                        <Insets left="30.0" />
-                     </HBox.margin>
-                  </Label>
-                  <Label fx:id="lblPaymentId" layoutX="40.0" layoutY="30.0" prefHeight="22.0" prefWidth="400.0" text="1" textFill="WHITE">
+                  </Button>
+                  <Label fx:id="lblPaymentId" prefHeight="22.0" prefWidth="314.0" text="1" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtSearchBar" prefHeight="26.0" prefWidth="470.0" promptText="search">
+                  <TextField fx:id="txtSearchBar" prefHeight="26.0" prefWidth="312.0" promptText="search">
                      <font>
                         <Font name="System Bold Italic" size="13.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets right="30.0" />
+                     </HBox.margin>
                   </TextField>
                </children>
             </HBox>
-            <HBox alignment="CENTER_RIGHT" layoutX="10.0" layoutY="10.0" prefHeight="55.0" prefWidth="1120.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="55.0" prefWidth="1120.0">
                <children>
-                  <Label prefHeight="22.0" prefWidth="166.0" text="Date" textFill="#819dbc">
+                  <Label prefHeight="22.0" prefWidth="146.0" text="Reservation Id :" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -50,16 +49,16 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField fx:id="txtDate" prefHeight="27.0" prefWidth="232.0" promptText="YYYY/MM/DD" style="-fx-background-color: #27272d; -fx-border-color: white; -fx-border-width: 0 0 1;">
+                  <ComboBox fx:id="cmbReservationId" onAction="#selectReservationId" prefHeight="26.0" prefWidth="182.0" />
+                  <Label fx:id="lblCustomerName" prefHeight="22.0" prefWidth="380.0" text="customerName" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
                      <HBox.margin>
-                        <Insets right="50.0" />
+                        <Insets left="50.0" />
                      </HBox.margin>
-                  </TextField>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="58.0" prefWidth="1120.0">
-               <children>
-                  <Label prefHeight="22.0" prefWidth="166.0" text="Reservation Id" textFill="#819dbc">
+                  </Label>
+                  <Label fx:id="lblcurrentDate" prefHeight="22.0" prefWidth="178.0" text="Date" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -67,55 +66,32 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </Label>
-                  <ComboBox fx:id="cmbReservationId" onAction="#selectReservationId" prefHeight="26.0" prefWidth="169.0" />
-                  <Label layoutX="40.0" layoutY="28.0" prefHeight="22.0" prefWidth="149.0" text="Type" textFill="#819dbc">
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <RadioButton fx:id="rdbAdvancePAymentBtn" mnemonicParsing="false" onAction="#selectAdvancePaymentBtn" prefHeight="22.0" prefWidth="309.0" text="Advance Payment" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="80.0" />
-                     </HBox.margin>
-                  </Label>
-                  <RadioButton fx:id="rdbAdvancePayment" mnemonicParsing="false" onAction="#selectAdvancedPaymentButton" prefHeight="21.0" prefWidth="241.0" text="Advanced Payment" textFill="WHITE">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </RadioButton>
-                  <RadioButton fx:id="rdbFullPayment" layoutX="590.0" layoutY="29.0" mnemonicParsing="false" onAction="#selectFullPaymentButton" prefHeight="21.0" prefWidth="244.0" text="Full Payment" textFill="WHITE">
-                     <font>
-                        <Font size="15.0" />
                      </font>
                      <HBox.margin>
                         <Insets left="50.0" />
                      </HBox.margin>
                   </RadioButton>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="55.0" prefWidth="1120.0">
-               <children>
-                  <Label prefHeight="22.0" prefWidth="166.0" text="Status" textFill="#819dbc">
+                  <RadioButton fx:id="rdbFullyPayment" layoutX="60.0" layoutY="49.0" mnemonicParsing="false" onAction="#selectFullyPaymentBtn" prefHeight="22.0" prefWidth="495.0" text="Fully Payment" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
-                     <HBox.margin>
-                        <Insets left="30.0" />
-                     </HBox.margin>
-                  </Label>
-                  <ComboBox fx:id="cmbStatus" onAction="#selectStatus" prefHeight="26.0" prefWidth="201.0" />
-                  <Label prefHeight="22.0" prefWidth="118.0" text="Amount" textFill="#819dbc">
-                     <font>
-                        <Font name="System Bold" size="16.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="250.0" />
-                     </HBox.margin>
-                  </Label>
-                  <TextField fx:id="txtAmount" prefHeight="26.0" prefWidth="159.0" promptText="0.00" style="-fx-background-color: #27272d; -fx-border-color: white; -fx-border-width: 0 0 1;" />
-                  <Label prefHeight="22.0" prefWidth="166.0" text="LKR" textFill="WHITE">
+                  </RadioButton>
+                  <Label prefHeight="22.0" prefWidth="44.0" text="LKR" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
+                  <TextField fx:id="txtAmount" prefHeight="26.0" prefWidth="201.0" style="-fx-background-color: #27272d; -fx-border-color: white; -fx-border-width: 0 0 1;">
+                     <font>
+                        <Font size="14.0" />
+                     </font></TextField>
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="1120.0">
@@ -152,7 +128,7 @@
                         <Insets />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnInvoice" layoutX="70.0" layoutY="23.0" mnemonicParsing="false" onAction="#navigateToInvoice" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #e28743;" text="Invoice" textFill="WHITE">
+                  <Button fx:id="btnInvoice" layoutX="70.0" layoutY="23.0" mnemonicParsing="false" onAction="#navigateToInvoice" prefHeight="26.0" prefWidth="142.0" style="-fx-background-color: #e28743;" text="Bill" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -162,16 +138,15 @@
                   </Button>
                </children>
             </HBox>
-            <TableView fx:id="paymentTable" onMouseClicked="#clickedTable" prefHeight="450.0" prefWidth="1120.0" style="-fx-background-color: #a0b5c9;">
+            <TableView fx:id="paymentTable" onMouseClicked="#clickedTable" prefHeight="461.0" prefWidth="1120.0" style="-fx-background-color: #a0b5c9;">
                <columns>
-                  <TableColumn fx:id="colPaymentId" prefWidth="115.0" text="Payment Id" />
-                  <TableColumn fx:id="colDate" prefWidth="107.0" text="Date" />
-                  <TableColumn fx:id="colReservationId" prefWidth="117.0" text="Reservation Id" />
-                  <TableColumn fx:id="colCustomerId" prefWidth="156.0" text="Customer Id" />
-                  <TableColumn fx:id="colcustomerName" prefWidth="150.0" text="Customer Name" />
-                  <TableColumn fx:id="colAmount" prefWidth="149.0" text="Amount" />
-                  <TableColumn fx:id="colType" prefWidth="168.0" text="Type" />
-                  <TableColumn fx:id="colStatus" prefWidth="157.0" text="Status" />
+                  <TableColumn fx:id="colPaymentId" prefWidth="132.0" text="Payment Id" />
+                  <TableColumn fx:id="colCutomer" prefWidth="150.0" text="Customer" />
+                  <TableColumn fx:id="colType" prefWidth="167.0" text="Type" />
+                  <TableColumn fx:id="colAmount" prefWidth="152.0" text="Amount" />
+                  <TableColumn fx:id="colReservationId" prefWidth="164.0" text="Reservation Id" />
+                  <TableColumn fx:id="colDate" prefWidth="159.0" text="Date" />
+                  <TableColumn fx:id="colStatus" prefWidth="195.0" text="Status" />
                </columns>
             </TableView>
          </children>
